--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
     
     <div class="agent-section">
       <img src="img/WhatsApp Image 2025-11-28 at 15.41.41.jpeg" alt="Agent Photo" class="agent-photo">
-      <h3 class="agent-name">MEHRAN SIDDIQUE</h3>
-      <p class="agent-role">ACCOUNTANT</p>
+      <h3 class="agent-name">Muhammad Zaeen Raza
+/h3>
+      <p class="agent-role">General Manager</p>
       
     </div>
 
     <div class="card-details">
-      <p><i class="fa-solid fa-mobile detail-icon"></i> <a href="tel:00971586412055">00971586412055</a></p>
+      <p><i class="fa-solid fa-mobile detail-icon"></i> <a href="tel:00971586412052">00971586412052</a></p>
 
       <p><i class="fa-solid fa-mobile detail-icon"></i> <a href="tel:0097142733392">0097142733392</a></p>
       <p><i class="fas fa-envelope detail-icon"></i> <a href="mailto:businesslink52@gmail.com">businesslink52@gmail.com</a></p>
@@ -53,6 +54,7 @@
   <script src="JS/send.js"></script>
 </body>
 </html>
+
 
 
 
