--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
     <div class="agent-section">
       <img src="img/WhatsApp Image 2025-11-28 at 15.39.58.jpeg" alt="Agent Photo" class="agent-photo">
-      <h3 class="agent-name">Muhammad Zaeen Raza/h3>
+      <h3 class="agent-name">Muhammad Zaeen Raza</h3>
       <p class="agent-role">General Manager</p>
       
     </div>
@@ -53,6 +53,7 @@
   <script src="JS/send.js"></script>
 </body>
 </html>
+
 
 
 
